--- a/libft1/.vscode/settings.json
+++ b/libft1/.vscode/settings.json
@@ -2,6 +2,7 @@
     "cmake.configureOnOpen": true,
     "files.associations": {
         "libft.h": "c",
-        "bit": "c"
+        "bit": "c",
+        "mcheck.h": "c"
     }
 }
