--- a/libft1/.vscode/settings.json
+++ b/libft1/.vscode/settings.json
@@ -3,6 +3,8 @@
     "files.associations": {
         "libft.h": "c",
         "bit": "c",
-        "mcheck.h": "c"
+        "mcheck.h": "c",
+        "libft_bonus.h": "c",
+        "stdio.h": "c"
     }
 }
