--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,7 @@
 {
     "files.associations": {
         "variant": "c",
-        "chrono": "c"
+        "chrono": "c",
+        "stdio.h": "c"
     }
 }
