--- a/ft_printf/Makefile
+++ b/ft_printf/Makefile
@@ -6,7 +6,7 @@
 #    By: subpark <subpark@student.42.fr>            +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2023/06/20 13:54:33 by subpark           #+#    #+#              #
-#    Updated: 2023/06/20 14:01:15 by subpark          ###   ########.fr        #
+#    Updated: 2023/06/21 00:00:01 by subpark          ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -21,7 +21,7 @@ OBJ = $(SRC:.c=.o)
 all: $(NAME)
 
 $(NAME): $(OBJ)
-		ar r $(NAME) $(OBJ)
+		@ar r $(NAME) $(OBJ)
 
 %.o: %.c ft_printf.h
 	@$(CC) $(CCFLAGS) -c $< -o $@
