--- a/ft_printf/Makefile
+++ b/ft_printf/Makefile
@@ -6,7 +6,7 @@
 #    By: subpark <subpark@student.42.fr>            +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2023/06/20 13:54:33 by subpark           #+#    #+#              #
-#    Updated: 2023/06/21 00:00:01 by subpark          ###   ########.fr        #
+#    Updated: 2023/06/21 16:27:08 by subpark          ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -16,12 +16,11 @@ CCFLAGS = -Wall -Werror -Wextra
 NAME = libftprintf.a
 SRC = ft_printf.c decimalNpointer.c low16.c prints1.c up16.c
 OBJ = $(SRC:.c=.o)
-.PHONY: all clean fclea re
 
 all: $(NAME)
 
 $(NAME): $(OBJ)
-		@ar r $(NAME) $(OBJ)
+		@ar rcs $(NAME) $(OBJ)
 
 %.o: %.c ft_printf.h
 	@$(CC) $(CCFLAGS) -c $< -o $@
@@ -33,3 +32,5 @@ fclean: clean
 		@rm -f $(NAME)
 
 re: fclean all
+
+.PHONY: all clean fclea re
