--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,7 @@
     "files.associations": {
         "variant": "c",
         "chrono": "c",
-        "stdio.h": "c"
+        "stdio.h": "c",
+        "push_swap.h": "c"
     }
 }
