trying in weekends

--- a/fdf/Makefile
+++ b/fdf/Makefile
@@ -6,7 +6,7 @@
 #    By: subpark <subpark@student.42.fr>            +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2023/07/14 15:58:17 by subpark           #+#    #+#              #
-#    Updated: 2023/07/18 16:46:40 by subpark          ###   ########.fr        #
+#    Updated: 2023/07/23 21:59:53 by subpark          ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -15,24 +15,22 @@ CFLAGS		= -Wall -Werror -Wextra
 
 RM			= rm
 
-INC_DIR		= ./include
+SOURCE_DIR	= source
 
 LIBFT		= libft.a
 LIBFT_DIR	= libft
-LIBFT_I_DIR	= $(LIBFT_DIR)/include
 LIBFT_PATH	= $(LIBFT_DIR)/$(LIBFT)
 
 MLX		= libmlx_Linux.a
 MLX_DIR	= minilibx-linux
-MLX_I_DIR	= $(MLX_DIR)/include
 MLX_PATH	= $(MLX_DIR)/$(MLX)
 MLX_FLAGS = -lmlx -framework OpenGL -framework AppKit
 
-HEADERS		= -I $(INC_DIR) -I $(LIBFT_I_DIR) -I $(MLX_I_DIR)
+HEADERS		= -I $(SOURCE_DIR) -I $(LIBFT_I_DIR) -I $(MLX_I_DIR)
 LINUX_LINK	= -Lmlx -lmlx -framework OpenGL -framework AppKit
 
 NAME 		= fdf
-SRC_NAME 	= alloc_array.c load_map.c
+SRC_NAME 	= source/alloc_array.c source/load_map.c
 OBJ_NAME 	= $(SRC_NAME:.c=.o)
 
 # Main Command
@@ -67,11 +65,11 @@ re: fclean all
 
 $(LIBFT):
 		@make -C $(LIBFT_DIR)
-		@mv $(LIBFT_PATH) ./
+		@mv $(LIBFT_DIR) ./
 
 $(MLX):
 		@make -C $(MLX_DIR)
-		@mv $(MLX_PATH) ./
+		@mv $(MLX_DIR) ./
 
 $(NAME): $(OBJ_NAME) $(LIBFT) $(MLX)
 		@$(CC) $(CCFLAGS) -o $@ $^ $(HEADERS) $(LINUX_LINK)
