still I have to manipulate array initialisation

--- a/fdf/Makefile
+++ b/fdf/Makefile
@@ -6,7 +6,7 @@
 #    By: siun <siun@student.42.fr>                  +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2023/07/14 15:58:17 by subpark           #+#    #+#              #
-#    Updated: 2023/07/25 23:54:58 by siun             ###   ########.fr        #
+#    Updated: 2023/07/27 17:32:26 by siun             ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -30,7 +30,8 @@ HEADERS		= -I $(SOURCE_DIR) -I $(LIBFT_I_DIR) -I $(MLX_I_DIR)
 LINUX_LINK	= -Lmlx -lmlx -framework OpenGL -framework AppKit
 
 NAME 		= fdf
-SRC_NAME 	= source/alloc_array.c source/load_map.c source/get_next_line.c
+SRC_NAME 	= source/alloc_array.c source/load_map.c source/get_next_line.c\
+			source/vect_cal.c
 OBJ_NAME 	= $(SRC_NAME:.c=.o)
 
 # Main Command
