last weekend of Jul

--- a/fdf/Makefile
+++ b/fdf/Makefile
@@ -6,7 +6,7 @@
 #    By: siun <siun@student.42.fr>                  +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2023/07/14 15:58:17 by subpark           #+#    #+#              #
-#    Updated: 2023/07/27 17:32:26 by siun             ###   ########.fr        #
+#    Updated: 2023/07/30 12:12:25 by siun             ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -31,7 +31,7 @@ LINUX_LINK	= -Lmlx -lmlx -framework OpenGL -framework AppKit
 
 NAME 		= fdf
 SRC_NAME 	= source/alloc_array.c source/load_map.c source/get_next_line.c\
-			source/vect_cal.c
+			source/vect_cal.c source/visualise.c
 OBJ_NAME 	= $(SRC_NAME:.c=.o)
 
 # Main Command
@@ -60,7 +60,7 @@ re: fclean all
 # Sub Command
 
 %.o: %.c
-		@$(CC) -Imlx -c -o $@ $< $(HEADERS)
+		@$(CC) -Imlx -c -o $@ $< -lm -lXext -lX11
 #		@$(CC) $(CCFLAGS) -Imlx -c -o $@ $< $(HEADERS)
 
 $(LIBFT):
@@ -72,7 +72,7 @@ $(MLX):
 		@mv $(MLX_DIR)/$(MLX) .
 
 $(NAME): $(OBJ_NAME) $(LIBFT) $(MLX)
-		@$(CC) -o $@ $^
+		@$(CC) -o $@ $^ -lm -lXext -lX11
 # -fsanitize=address -static-libasan -g
 #		@$(CC) $(CCFLAGS) -o $@ $^
 
