--- a/fdf/.vscode/settings.json
+++ b/fdf/.vscode/settings.json
@@ -1,6 +1,7 @@
 {
     "files.associations": {
         "libft.h": "c",
-        "keysym.h": "c"
+        "keysym.h": "c",
+        "mlx.h": "c"
     }
 }
