--- a/fdf/Makefile
+++ b/fdf/Makefile
@@ -6,7 +6,7 @@
 #    By: subpark <subpark@student.42.fr>            +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2023/07/14 15:58:17 by subpark           #+#    #+#              #
-#    Updated: 2023/08/08 16:23:11 by subpark          ###   ########.fr        #
+#    Updated: 2023/08/09 18:16:34 by subpark          ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -32,26 +32,23 @@ LINUX_LINK	= -Lmlx -lmlx -framework OpenGL -framework AppKit
 NAME 		= fdf
 SRC_NAME 	= source/load_map.c source/get_next_line.c source/alloc_array.c\
 			source/vect_cal.c source/make_line.c source/visualise.c\
-			source/modify_arr.c source/find_index.c
+			source/modify_arr.c source/find_index.c source/is_num_space.c
 OBJ_NAME 	= $(SRC_NAME:.c=.o)
 
 # Main Command
 
-# Don't forget to run "git submodule init && git submodule update"
 all: $(NAME)
-
-#bonus: $(NAME_B)
 
 clean:
 		@make clean -C $(LIBFT_DIR)
-#		@make clean -C $(MLX_DIR)
+		@$(RM) -rf $(MLX_DIR)
 		@$(RM) -f $(SOURCE_DIR)/$(OBJ_NAME)
 		@$(RM) -f source/load_map.o
-#		@$(RM) -rf $(MLX_DIR)/build
 
 fclean: clean
 		@make fclean -C $(LIBFT_DIR)
 		@$(RM) -f $(LIBFT)
+		@$(RM) -rf $(MLX_DIR)
 		@$(RM) -f $(MLX)
 		@$(RM) -f $(SOURCE_DIR)/$(OBJ_NAME)
 		@$(RM) -f source/load_map.o
@@ -63,21 +60,19 @@ re: fclean all
 # Sub Command
 
 %.o: %.c
-		@$(CC) -Imlx -c -o $@ $<
-#		@$(CC) $(CCFLAGS) -Imlx -c -o $@ $< $(HEADERS)
+		@$(CC) $(CCFLAGS) -Imlx -c -o $@ $< $(HEADERS)
 
 $(LIBFT):
 		@make -C $(LIBFT_DIR)
 		@mv $(LIBFT_DIR)/$(LIBFT) .
 
 $(MLX):
+		@git clone git@github.com:42Paris/minilibx-linux.git
 		@make -C $(MLX_DIR)
 		@mv $(MLX_DIR)/$(MLX) .
 
 $(NAME): $(OBJ_NAME) $(LIBFT) $(MLX)
-		@$(CC) -o $@ $^ -lm -lXext -lX11
-# -fsanitize=address -static-libasan -g
-#		@$(CC) $(CCFLAGS) -o $@ $^
+		@$(CC) $(CCFLAGS) -o $@ $^ -lm -lXext -lX11
 
 # Phony target
 
