--- a/new_push_swap/Makefile
+++ b/new_push_swap/Makefile
@@ -6,7 +6,7 @@
 #    By: subpark <subpark@student.42.fr>            +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2023/08/16 15:21:28 by subpark           #+#    #+#              #
-#    Updated: 2023/09/06 16:31:13 by subpark          ###   ########.fr        #
+#    Updated: 2023/09/08 13:27:27 by subpark          ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -24,7 +24,7 @@ PRINTF_PATH	= $(PRINTF_DIR)/$(PRINTF)
 NAME	= push_swap
 SRC		= source/push.c source/rerotate.c source/rotate.c source/swap.c \
 		source/main.c source/select_sort.c source/stacking.c source/move.c \
-		source/node.c
+		source/node.c source/check_node.c
 
 OBJ		= $(SRC:.c=.o)
 
