--- a/new_push_swap/libft/Makefile
+++ b/new_push_swap/libft/Makefile
@@ -6,7 +6,7 @@
 #    By: subpark <subpark@student.42.fr>            +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2023/05/16 18:40:02 by subpark           #+#    #+#              #
-#    Updated: 2023/06/01 17:40:48 by subpark          ###   ########.fr        #
+#    Updated: 2023/10/18 14:40:47 by subpark          ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -20,7 +20,7 @@ SRC1 = ft_atoi.c ft_isprint.c ft_putchar_fd.c ft_striteri.c ft_strnstr.c \
 	ft_isalnum.c  ft_memcmp.c   ft_putstr_fd.c   ft_strlcpy.c   ft_substr.c\
 	ft_isalpha.c  ft_memcpy.c   ft_split.c       ft_strlen.c    ft_tolower.c\
 	ft_isascii.c  ft_memmove.c  ft_strchr.c      ft_strmapi.c   ft_toupper.c\
-	ft_isdigit.c  ft_memset.c   ft_strdup.c      ft_strncmp.c
+	ft_isdigit.c  ft_memset.c   ft_strdup.c      ft_strncmp.c	ft_atoi_error.c
 SRC2 = ft_lstadd_front_bonus.c	ft_lstlast_bonus.c	ft_lstnew_bonus.c\
 	ft_lstsize_bonus.c	ft_lstadd_back_bonus.c	ft_lstdelone_bonus.c\
 	ft_lstclear_bonus.c	ft_lstmap_bonus.c	ft_lstiter_bonus.c
